2012-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- autoconfマクロの宣言順の不備を修正

2012-02-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/main_window.cpp:
	- 新規作成時のタイプ選択からKNNとCDTを削除

2011-06-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/Makefile.am:
	- average_formationをインストールターゲットに変更

	* src/edit_canvas.cpp:
	- 背面表示のフォーメーションデータのインデックス番号が0から始まる
	ように変更

2011-06-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_canvas.cpp:
	* src/sample_view.cpp:
	- 表示されるデータのインデックスが0から始まるように変更

2011-06-04  Tomoharu NAKASHIMA  <nakashi@cs.osakafu-u.ac.jp>

	* tool/Makefile.am:
	- typo の修正

2011-05-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- clangライブラリのチェックを追加

2010-09-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* README:
	* configure.ac:
	- Initial release 0.0.0.

	* xpm/fedit2.xpm:
	* mingw/rcsc.pro:
	* xpm/soccerwindow2-nostr.xpm:
	* xpm/soccerwindow2.xpm:
	* Makefile.am:
	* src/fedit2.ico:
	* src/main_window.cpp:
	* rcsc/rcsc.pro:
	- Qt+MinGW環境用の.proファイルを配布物へ追加．
	- アイコンを変更．

2010-08-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* fedit2.pro:
	* mingw:
	* mingw/rcsc.pro:
	* src/fedit2.ico:
	* src/fedit2.rc:
	* src/src.pro:
	* Makefile.am:
	* src/Makefile.am:
	- MinGW環境でのビルド設定を追加．

2010-08-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- cppunitのチェックを削除

2010-08-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* README:
	* configure.ac:
	- initial release candidate.

	* m4/ax_boost_base.m4:
	- 最新のマクロに更新

	* src/main_window.cpp:
	- 実装されていないメニューを消去

	* tool/average_formation.cpp:
	- fixed typo

2010-06-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_canvas.cpp:
	- バックグラウンドデータの三角形分割を参照しべきところを，通常デー
	タの三角形分割を参照していたバグを修正した

2010-06-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/Makefile.am:
	* tool/average_formation.cpp:
	* Makefile.am:
	* configure.ac:
	* src/Makefile.am:
	- 2つのフォーメーション設定ファイルから，平均値を取るフォーメーショ